--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,7 @@
 version: '3.6'
 services:
   sponsorblockcast:
-    build: 
-      context: .
-      cache_from:
-        - alpine:latest
-    image: sponsorblockcast:latest
+    image: ghcr.io/nichobi/sponsorblockcast:latest
     network_mode: host
     environment:
       SBCPOLLINTERVAL: 1
