Fix for curl/curl#6200
Workaround for curl version 7.74.0 and earlier which would fail with an "Out of Memory" error if $HOME is unset.
It happens that the systemd environment does not set $HOME by default so adding it explicitly here avoids the bug.

--- a/sponsorblockcast.service
+++ b/sponsorblockcast.service
@@ -4,6 +4,7 @@ After=network.target
 [Service]
 ExecStart=/usr/bin/sponsorblockcast
 DynamicUser=yes
+Environment=HOME=/tmp/sponsorblockcast
 
 [Install]
 WantedBy=multi-user.target
