--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -21,6 +21,10 @@ jobs:
           LATEST_RELEASE=$(curl -sL https://api.github.com/repos/vishen/go-chromecast/releases/latest | jq -r '.tag_name')
           echo "::set-output name=release::$LATEST_RELEASE"
 
+      - name: Update CURRENT_RELEASE
+        if: steps.check_release.outputs.release != env.CURRENT_RELEASE
+        run: echo "CURRENT_RELEASE=${{ steps.check_release.outputs.release }}" >> $GITHUB_ENV
+
       - name: Checkout
         if: steps.check_release.outputs.release != env.CURRENT_RELEASE
         uses: actions/checkout@v2
