--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -20,10 +20,7 @@ jobs:
         run: |
           LATEST_RELEASE=$(curl -sL https://api.github.com/repos/vishen/go-chromecast/releases/latest | jq -r '.tag_name')
           echo "release=$LATEST_RELEASE" >> $GITHUB_ENV
-
-      - name: Update CURRENT_RELEASE
-        if: steps.check_release.outputs.release != env.CURRENT_RELEASE
-        run: echo "CURRENT_RELEASE=${{ steps.check_release.outputs.release }}" >> $GITHUB_ENV
+          echo "CURRENT_RELEASE=${{ steps.check_release.outputs.release }}" >> $GITHUB_ENV
 
       - name: Checkout
         if: steps.check_release.outputs.release != env.CURRENT_RELEASE
