--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -8,7 +8,7 @@ on:
       - main
 
 env:
-  CURRENT_RELEASE: v0.3.1
+  CURRENT_RELEASE: v0.2.12
 
 jobs:
   build-multi-arch-image:
@@ -20,7 +20,9 @@ jobs:
         run: |
           LATEST_RELEASE=$(curl -sL https://api.github.com/repos/vishen/go-chromecast/releases/latest | jq -r '.tag_name')
           echo "LATEST_RELEASE=$LATEST_RELEASE" >> $GITHUB_ENV
-  
+          if [[ "$LATEST_RELEASE" != "$CURRENT_RELEASE" ]]; then
+            echo "CURRENT_RELEASE=$LATEST_RELEASE" >> $GITHUB_ENV
+          fi  
       - name: Checkout
         if: env.LATEST_RELEASE != env.CURRENT_RELEASE
         uses: actions/checkout@v2
