--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           LATEST_RELEASE=$(curl -sL https://api.github.com/repos/vishen/go-chromecast/releases/latest | jq -r '.tag_name')
           echo "LATEST_RELEASE=$LATEST_RELEASE" >> $GITHUB_ENV
-
+          touch release.txt
           CURRENT_RELEASE=$(cat $CURRENT_RELEASE_FILE)
           echo "CURRENT_RELEASE=$CURRENT_RELEASE"
   
