--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -42,13 +42,14 @@ jobs:
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-        if: ${{ steps.check-version-and-update-dockerfile.outputs.version_changed == 'true' }}
+        if: ${{ steps.check-version-and-update-dockerfile.outputs.version_changed == true }}
         
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
         with:
           install: true
-        if: ${{ steps.check-version-and-update-dockerfile.outputs.version_changed == 'true' }}
+        if: ${{ steps.check-version-and-update-dockerfile.outputs.version_changed == true }}
+
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1 
@@ -56,7 +57,8 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-        if: ${{ steps.check-version-and-update-dockerfile.outputs.version_changed == 'true' }}
+        if: ${{ steps.check-version-and-update-dockerfile.outputs.version_changed == true }}
+
 
       - name: Build and push
         uses: docker/build-push-action@v2
@@ -64,4 +66,5 @@ jobs:
           push: true 
           tags: ghcr.io/${{ github.repository }}:latest
           platforms: linux/amd64,linux/386,linux/arm64,linux/arm/v7,linux/arm/v6
-        if: ${{ steps.check-version-and-update-dockerfile.outputs.version_changed == 'true' }}
+        if: ${{ steps.check-version-and-update-dockerfile.outputs.version_changed == true }}
+
