--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -56,7 +56,6 @@ jobs:
           install: true
         if: ${{ env.VERSION_CHANGED == 'true' }}
 
-
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2.1.0
         with:
@@ -65,6 +64,11 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
         if: ${{ env.VERSION_CHANGED == 'true' }}
 
+      - name: Download modified Dockerfile artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: modified-dockerfile
+        if: ${{ env.VERSION_CHANGED == 'true' }}
 
       - name: Build and push
         uses:  docker/build-push-action@v4.0.0
@@ -72,6 +76,5 @@ jobs:
           push: true 
           tags: ghcr.io/${{ github.repository }}:latest
           platforms: linux/amd64,linux/386,linux/arm64,linux/arm/v7,linux/arm/v6
-          dockerfile: ./Dockerfile # specify the path to your Dockerfile here
         if: ${{ env.VERSION_CHANGED == 'true' }}
 
