--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -76,5 +76,6 @@ jobs:
           push: true 
           tags: ghcr.io/${{ github.repository }}:latest
           platforms: linux/amd64,linux/386,linux/arm64,linux/arm/v7,linux/arm/v6
+          dockerfile: ./Dockerfile
         if: ${{ env.VERSION_CHANGED == 'true' }}
 
