--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -57,6 +57,11 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
         if: ${{ env.VERSION_CHANGED == 'true' }}
 
+      - name: Print downloaded Dockerfile
+        run: cat Dockerfile
+        if: ${{ env.VERSION_CHANGED == 'true' }}
+
+
       - name: Build and push
         uses: docker/build-push-action@v4.0.0
         with:
