--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -57,17 +57,12 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
         if: ${{ env.VERSION_CHANGED == 'true' }}
 
-      - name: Print downloaded Dockerfile
-        run: cat Dockerfile
-        if: ${{ env.VERSION_CHANGED == 'true' }}
-
-
       - name: Build and push
         uses: docker/build-push-action@v4.0.0
         with:
           push: true 
           tags: ghcr.io/${{ github.repository }}:latest
           platforms: linux/amd64,linux/386,linux/arm64,linux/arm/v7,linux/arm/v6
-          dockerfile: Dockerfile
+          file: ./Dockerfile
         if: ${{ env.VERSION_CHANGED == 'true' }}
 
