--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -61,6 +61,7 @@ jobs:
         uses: docker/build-push-action@v4.0.0
         with:
           push: true 
+          context: .
           tags: ghcr.io/${{ github.repository }}:latest
           platforms: linux/amd64,linux/386,linux/arm64,linux/arm/v7,linux/arm/v6
           file: ./Dockerfile
