--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,3 +11,8 @@ services:
     cap_add: 
       - NET_ADMIN
     restart: always
+    healthcheck:
+      test: ["CMD", "go-chromecast", "ls"]
+      interval: 60s
+      timeout: 10s
+      retries: 3
